Rename section on finding FEM solution.

--- a/fem.tex
+++ b/fem.tex
@@ -249,8 +249,12 @@ Use this to generate the grids for Multigrid
 
 % ---------------------------------
 
-\section{Newton's method}
+\section{Computing the finite element solution}
 
 Put it all together
 Solve the full system
 Solve the Jacobian, blah...
+
+Newton's method is the general purpose solver for \oomph.
+Our problem is linear, Newton solves it in one shot.
+
